System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1060 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.28
Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-11-20 14:27, hash: rB26bd5ebd42e3
Worked: 2.80
Short description of error
When I render using Workbench Engine and object is in sculpt mode, the object disappears in render and sometimes Blender crashes
Exact steps for others to reproduce the error
Based on the default startup
- Switch to the Workbench Engine for rendering
- Enter sculpt mode for the default cube
- Render image, it's ok
- Sculpt on the default cube using any brush
- Render. The cube disappears
On complex meshes Blender sometimes crashes when using Workbench engine and sculpt mode